
20: New: -p option shows number of comments and comments/block statistics. (may be fooled by -- in strings).

21. New: -p option shows number of branches and branches/block statistics.

22. Change: As a security precaution, the trace command, and pragma inspect, inspection_peek and inspection_point are no longer allowed in testing or maintenance phases unless at the breakout prompt.  Tracing can be invoked by the command line options.

23. Change: As a security precaution, JSON error message have values do not appear when in maintenance mode.

24. New: --without-pcre configuration option will disable PCRE library support.

25. Change: a script will not run for the same permission issues as an include file.

26. Fix: script file name fix if the error messages where it was appending file suffixes.

27. New: constant specifications (i.e. forward constants).

28. Fix: tests for now ignore deleted identifiers within the symbol table.  Before, only deleted identifiers on the top of the symbol table were ignored.

29. Change: strings.image handles enumerated items.

30. Fix: failed assignments to array variables or anonymous array variables during declaration will delete the half-declared variable.

31. Fix: backquotes handled correctly in a shell word when the backquotes are not the first item in the word.

32. [Fedja B] Change: If Git exists, configure will use Git to create the build version string attached to the development command prompt.  Otherwise, the current date is used as before.

33. [Marek K] New: New directory function.

34. [Marek K] Change: Changes to support Ubuntu 19.10.

35. New: help command now supports -h and -m to produce HTML and Groff (man page) output for internal help topics.

36. Fix: certain checks for readable and executable files now handle root and gid groups better.

37. Change: help for scripts now rendered with the same report class as the built-in topics.

38. New: New annotations: content, examples, exceptions, footer.