@@ -81,3 +81,6 @@ CHANGES SINCE 2.2.2
 37. Change: help for scripts now rendered with the same report class as the built-in topics.
 
 38. New: New annotations: content, examples, exceptions, footer.
+
+39. New: pragma manual_test, pragma manual_test_result.
+
